--- a/The Math/OnboardingJournalView.xib
+++ b/The Math/OnboardingJournalView.xib
@@ -29,7 +29,7 @@
                                     <variation key="heightClass=regular-widthClass=compact" constant="286"/>
                                 </constraint>
                             </constraints>
-                            <string key="text">Write your self a quick note to remember the moment later: Why were you stressed? Why did you feel good? 
+                            <string key="text">Write your self a quick note to recall the moment later: Why were you stressed? Why did you feel good?
 
 Use the Categories to help understand how your moods relate to different areas of your life.</string>
                             <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
